preventing page scrolling when the image-slideshow pop up is visible

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -23,6 +23,12 @@ body {
     margin: 0;
 }
 
+html.disable-scroll {
+    position: fixed;
+    overflow-y: scroll;
+    width: 100%;
+}
+
 .mdc-button {
     transition-duration: 0.1s;
 }
